// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModalHeader /> should display the component correctly - with the category selector: with the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Article
      </span>
      <div
        class="headerControls"
      >
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="close modal"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons mr-2"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
    <div
      class="categorySelect"
    >
      <div>
        <div
          class="dropdown"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="select noCategory"
            data-toggle="dropdown"
          >
            <div
              class="select dropdown-toggle selectFullWidth"
            >
              <span
                class="label placeholder"
                style="min-width: 10px; opacity: 1;"
              >
                Select an option
              </span>
              <input
                autocomplete="chrome-off"
                class="input"
                style="min-width: 10px;"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="options optionsFullWidth dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              No result
            </h6>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`<HelpCenterEditModalHeader /> should display the component correctly - without the category selector: without the category selector 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="headerTopContainer"
    >
      <span
        class="titleInput"
      >
        Article
      </span>
      <div
        class="headerControls"
      >
        <div
          class="wrapper"
        >
          <button
            class="trigger"
            data-testid="dropdown-select-trigger"
          >
            <span
              class="label"
            >
              <span>
                <img
                  alt="fr-FR"
                  class="flag-emoji"
                  src="test-file-stub"
                />
                <span>
                  French - France
                </span>
              </span>
            </span>
            <span
              class="material-icons"
            >
              arrow_drop_down
            </span>
          </button>
        </div>
        <button
          aria-label="close modal"
          class="controlButton"
          type="button"
        >
          <i
            class="material-icons mr-2"
          >
            keyboard_tab
          </i>
        </button>
      </div>
    </div>
    <div
      class="break"
    />
  </header>
</div>
`;
